--- a/css/cartpage.css
+++ b/css/cartpage.css
@@ -1,17 +1,20 @@
-*{
+* {
     margin: 0;
     padding: 0;
     text-transform: capitalize;
 }
-input{
+
+input {
     width: 50px;
 }
-thead{
+
+thead {
     background-color: #6f42c1;
     color: white;
     font-size: 25px;
 }
-.btn{
+
+.btn {
     width: 100%;
     background-color: #6f42c1;
     color: black;
@@ -19,9 +22,41 @@ thead{
     font-weight: bold;
     border-radius: 10px;
 }
-th,td{
+
+th,
+td {
     font-size: 20px;
 }
-@media(max-width:767px){
 
+.price {
+    display: flex;
+    justify-content: end;
+}
+
+.totalprice {
+    width: 360px;
+    background-color: #6f42c1;
+    color: white;
+    padding: 20px 10px;
+    border-radius: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.remove {
+    color: red;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.remove:hover {
+    background-color: black;
+}
+
+@media(max-width:767px) {
+    .totalprice {
+        width: 400px;
+    }
 }
