--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -4,7 +4,7 @@
 .navbar,
 .card-body, 
 .info{
-    background-color: #6f42c1;/*#7747a7;/*#4f5acf;*/
+    background-color: #6f42c1;
 }
 .nav-link, 
 .card-body, 
