--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .navbar, .card-body, .info{
-    background-color: #6f42c1;/*#7747a7;/*#4f5acf;*/
+    background-color: #6f42c1;
 }
 .nav-link, .card-body, .info{
     color: white;
